--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 ### ATH ÞETTA ER NBEINT FRÁ GITHUB. FARA VEL YFIR!
-##spring.datasource.driverClassName=org.postgresql.jdbc.driver
-# spring.datasource.driverClassName=org.postgresql.Driver
-##spring.datasource.url=jdbc:postgresql://localhost:5432/gaiadb
-##spring.datasource.username=postgres
-##spring.datasource.password=Accord073,
+# What Driver to use
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/gaiadb
+spring.datasource.username=postgres
+spring.datasource.password=freyr0908
 
 # spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 ##spring.jpa.show-sql=false
-##spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
+
 
 # Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
 ##spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
