--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.datasource.password=freyr0908
 ##spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
+#ATH Til ad profa SQL
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
 ##spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
