Auto db creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-### ATH ÞETTA ER NBEINT FRÁ GITHUB. FARA VEL YFIR!
+### EKKI BREYTA
 # What Driver to use
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
