--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/gaiadb
 spring.datasource.username=postgres
-spring.datasource.password=freyr0908
+spring.datasource.password=Accord073,
 
 # spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 ##spring.jpa.show-sql=false
