--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 ### EKKI BREYTA
+
 # What Driver to use
+spring.main.banner-mode=off
+logging.level.org.springframework=ERROR
+
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -9,7 +14,6 @@ spring.datasource.password=freyr0908
 
 # spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 ##spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 
 #ATH Til ad profa SQL
