--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/gaiadb
-spring.datasource.username=postgres
-spring.datasource.password=freyr0908
+spring.datasource.username=omararnars
+spring.datasource.password=monkey16
 
 # spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 ##spring.jpa.show-sql=false
