--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,15 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<!-- Prufa með validator -->
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
 	</dependencies>
+
+
 
 	<build>
 		<plugins>
