--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 # Because detection is disabled you have to set correct dialect by hand.
 ##spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
+# Test fyrir Icons!
+jsf.primefaces.font-awesome=true
+
 
