--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.platform=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/gaiadb
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=freyr0908
         
 
 # spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
