--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,10 @@ spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/gaiadb
-spring.datasource.username=postgres
-spring.datasource.password=freyr0908
+# Here below you should input your postgres credentials so that you can run this project.
+# values now are not real
+spring.datasource.username=username
+spring.datasource.password=password
         
 
 # spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
