--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/gaiadb
 # Here below you should input your postgres credentials so that you can run this project.
 # values now are not real
-spring.datasource.username=username
-spring.datasource.password=password
+spring.datasource.username=postgres
+spring.datasource.password=Accord073,
         
+jwt.secret=SUPER.SECRET.STRING
 
 # spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 ##spring.jpa.show-sql=false
